# psspnn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/psspnn/: __init__.py  cli.py
src/psspnn/data/: __init__.py  download.py  dssp.py  encoding.py  protein_ids.py
src/psspnn/evaluation/: __init__.py  metrics.py
src/psspnn/model/: __init__.py  network.py  predict.py  training.py
tests/: conftest.py  test_encoding.py  test_metrics.py  test_network.py  test_predict.py  test_training.py
