[tool.poetry]
name = "psspnn"
version = "0.1.0"
description = "Holley & Karplus 1989 protein secondary structure prediction with a neural network"
authors = ["BioTeam"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bioteam/psspnn"
keywords = ["bioinformatics", "protein", "secondary-structure", "neural-network"]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
packages = [{include = "psspnn", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.24"
tensorflow = ">=2.13"
biopython = ">=1.80"
pydssp = ">=0.9"
click = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"

[tool.poetry.scripts]
psspnn = "psspnn.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
