[project]
name = "psspnn"
version = "0.1.0"
description = "Model from Holley & Karplus 1989 Protein secondary structure prediction with a neural network"
authors = [{ name = "BioTeam" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "bioinformatics",
    "protein",
    "secondary-structure",
    "neural-network",
]
classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "biopython>=1.80",
    "pydssp>=0.9",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
psspnn = "psspnn.cli:main"

[project.urls]
Repository = "https://github.com/bioteam/psspnn"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
